# sentinel

./: .editorconfig  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  REUSE.toml  deny.toml  flake.nix  install.sh  justfile  meson.build  rustfmt.toml  sentinel.install  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compositor_compat.yml  config.yml  feature_request.yml
.github/release-notes/: v0.10.0.md  v0.11.1.md  v0.13.0.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  fuzz.yml  pages.yml  release.yml  scorecard.yml
config/: polkit-1  sentinel.conf  su  sudo
crates/pam-sentinel/: Cargo.toml  build.rs
crates/pam-sentinel/src/: agent_bypass.rs  config.rs  display.rs  helper.rs  lib.rs  locale.rs  proc_info.rs  timestamp.rs
crates/sentinel-broker-proto/: Cargo.toml
crates/sentinel-broker-proto/src/: lib.rs
crates/sentinel-broker/src/: main.rs
crates/sentinel-config/: Cargo.toml  build.rs
crates/sentinel-config/src/: lib.rs
crates/sentinel-helper/: Cargo.toml
crates/sentinel-helper-kde/: Cargo.toml  build.rs
crates/sentinel-helper-kde/qml/: DialogCard.qml
crates/sentinel-helper-kde/src/: bridge.rs  main.rs
crates/sentinel-helper/locales/de-DE/: sentinel-helper.ftl
crates/sentinel-helper/locales/en-US/: sentinel-helper.ftl
crates/sentinel-helper/locales/es-ES/: sentinel-helper.ftl
crates/sentinel-helper/locales/fr-FR/: sentinel-helper.ftl
crates/sentinel-helper/locales/it-IT/: sentinel-helper.ftl
crates/sentinel-helper/locales/ja-JP/: sentinel-helper.ftl
crates/sentinel-helper/locales/nl-NL/: sentinel-helper.ftl
crates/sentinel-helper/locales/pl-PL/: sentinel-helper.ftl
crates/sentinel-helper/locales/pt-BR/: sentinel-helper.ftl
crates/sentinel-helper/locales/ru-RU/: sentinel-helper.ftl
crates/sentinel-helper/locales/tr-TR/: sentinel-helper.ftl
crates/sentinel-helper/locales/zh-CN/: sentinel-helper.ftl
crates/sentinel-helper/src/: app.rs  audio.rs  cli.rs  i18n.rs  main.rs  result.rs
crates/sentinel-polkit-agent/: Cargo.toml  build.rs
crates/sentinel-polkit-agent/src/: agent.rs  approval_queue.rs  authority.rs  bypass_service.rs  helper1.rs  helper_ui.rs  identity.rs  lib.rs  main.rs  session.rs  socket_server.rs  subject.rs
crates/sentinel-polkit-agent/tests/: agent_flow.rs
crates/sentinel-shared/: Cargo.toml  build.rs
crates/sentinel-shared/src/: audit.rs  cli.rs  lib.rs  ui_i18n.rs
crates/sentinel-token/: Cargo.toml
crates/sentinel-token/src/: lib.rs
docs/: book.toml
docs/screenshots/: README.md
docs/src/: SUMMARY.md  architecture.md  building-from-source.md  configuration.md  contributing.md  installation.md  introduction.md  pam-wiring.md  security.md  troubleshooting.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: broker_proto.rs  format_message.rs  strip_elevation.rs  verdict_parse.rs
helper/: gtk_utils.hpp  main.cpp  meson.build  session_lock.cpp  session_lock.hpp  window.cpp  window.hpp
nix/: module.nix
packaging/: FLATPAK.md
packaging-kde/: install.sh  uninstall.sh
packaging-kde/kde-release-notes/: v0.8.0.md  v0.8.1.md
packaging-kde/packaging/arch/: 49-sentinel-admin.rules  PKGBUILD  README.md  sentinel-kde.install
packaging-kde/packaging/dbus/: org.sentinel.Agent.conf
packaging-kde/packaging/deb/: postinst  prerm
packaging-kde/packaging/man/: pam_sentinel.8  sentinel.conf.5
packaging-kde/packaging/rpm/: post.sh  preun.sh
packaging-kde/packaging/systemd/user/: sentinel-polkit-agent.service
packaging-kde/scripts/: build-release.sh  dev-test.sh  test-install-container.sh  test-install-incontainer.sh
packaging/arch/: PKGBUILD  PKGBUILD-git  README.md  sentinel.install
packaging/debian/: postinst  prerm
packaging/hyprland/: sentinel.conf
packaging/man/: pam_sentinel.8  sentinel.conf.5
packaging/systemd/: sentinel-polkit-agent.service
packaging/systemd/polkit-agent-helper@.service.d/: sentinel.conf
packaging/xdg-autostart/: sentinel-polkit-agent.desktop
pam/: meson.build  pam_sentinel.c
scripts/: build-release.sh  dev-test.sh  pam_authtest.rs  release-local.sh  test-install-container.sh  test-install-incontainer.sh
