[workspace]
resolver = "2"
members = [
    "crates/pam-sentinel",
    "crates/sentinel-shared",
    "crates/sentinel-polkit-agent",
    "crates/sentinel-helper",       # COSMIC / libcosmic frontend
    "crates/sentinel-helper-kde",   # KDE Plasma / Kirigami frontend
]
# Both helpers pull a heavy GUI toolchain (libcosmic / Qt + cxx-qt). Keep
# them out of the default set so a bare `cargo build` / `cargo test` builds
# the pure-Rust auth-path backend (PAM module + agent) without any GUI
# deps. Build a GUI explicitly with `cargo build -p sentinel-helper[-kde]`.
default-members = [
    "crates/pam-sentinel",
    "crates/sentinel-shared",
    "crates/sentinel-polkit-agent",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/atayozcan/sentinel"
authors = ["Atay Özcan <atay@oezcan.me>"]
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
log = "0.4"
syslog = "7"
nix = { version = "0.31.3", features = ["fs", "process", "user", "poll", "signal"] }
anyhow = "1"
thiserror = "2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
