# SPDX-FileCopyrightText: 2026 Atay Özcan <atay@oezcan.me>
# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "sentinel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.sentinel-shared]
path = "../crates/sentinel-shared"

[dependencies.sentinel-broker-proto]
path = "../crates/sentinel-broker-proto"

# Own workspace so the fuzz crate (and its libfuzzer-sys / nightly-only
# build) is excluded from the parent workspace's `cargo build`/`test`.
[workspace]

[[bin]]
name = "verdict_parse"
path = "fuzz_targets/verdict_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "strip_elevation"
path = "fuzz_targets/strip_elevation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "format_message"
path = "fuzz_targets/format_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "broker_proto"
path = "fuzz_targets/broker_proto.rs"
test = false
doc = false
bench = false
