[package]
name = "pam-sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PAM module for graphical privilege-escalation confirmation"

[lib]
name = "pam_sentinel"
crate-type = ["cdylib"]

[dependencies]
pam-bindings = "0.1"
serde.workspace = true
toml.workspace = true
syslog.workspace = true
log.workspace = true
nix.workspace = true
anyhow.workspace = true

[build-dependencies]
