[package]
name = "sentinel-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared TOML configuration schema and loader for the Sentinel PAM module + polkit agent"

[lib]
name = "sentinel_config"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
toml.workspace = true
log.workspace = true
