# SPDX-FileCopyrightText: 2025 Atay Özcan <atay@oezcan.me>
# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "sentinel-helper-kde"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "KDE Plasma-native confirmation dialog for Sentinel privilege escalation (Rust + cxx-qt + Kirigami)"

[[bin]]
name = "sentinel-helper-kde"
path = "src/main.rs"

[dependencies]
# cxx-qt 0.8.x — the current release series, Qt 6 native.
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
# QApplication lives in -extras; qqc2-desktop-style (the Breeze QtQuick
# style) needs a QApplication (QtWidgets) rather than a bare QGuiApplication.
cxx-qt-lib-extras = "0.8"
rand = "0.10"
# Shared Outcome wire enum, CLI parser, and icon-name resolution so the
# helper, PAM module, and polkit agent agree on the invocation contract.
sentinel-shared = { path = "../sentinel-shared", features = ["cli"] }

[build-dependencies]
cxx-qt-build = "0.8"

# ---------------------------------------------------------------------------
# Distro packages (.deb / .rpm) — BINARY, via the install.sh wrapper.
# Both ship the prebuilt bundle tarball (assembled by
# scripts/release-local.sh, which stages it at
# target/release/sentinel-kde-bundle.tar.gz before invoking the tools) and
# run the tested, distro-adaptive install.sh in the post-install scriptlet,
# so pam_sentinel is wired against THIS distro's polkit-1 PAM stack rather
# than a hardcoded one. --no-sudo keeps it polkit-only, like the AUR pkg.
#
# NOTE: runtime dep NAMES are best-effort per distro (Qt6/KF6 packages are
# named differently on Debian vs Fedora vs openSUSE) and may need tuning;
# they gate the helper at RUNTIME, not the install (which only deploys files
# + wires PAM). Build:  scripts/release-local.sh  (handles staging + both).
# ---------------------------------------------------------------------------
[package.metadata.deb]
name = "sentinel-kde"
maintainer = "Atay Özcan <atay@oezcan.me>"
section = "admin"
priority = "optional"
depends = "libpam0g, polkitd | policykit-1"
recommends = "qt6-qpa-plugins, qml6-module-org-kde-kirigami, libkf6kirigami-bin"
extended-description = "UAC-style confirmation dialog for privilege escalation on KDE Plasma (Wayland). Ships prebuilt binaries; the post-install step wires pam_sentinel into the distro's polkit-1 PAM stack and sets up the broker."
maintainer-scripts = "../../packaging-kde/packaging/deb/"
assets = [
    ["target/release/sentinel-kde-bundle.tar.gz", "usr/lib/sentinel-kde/bundle.tar.gz", "644"],
]

[package.metadata.generate-rpm]
name = "sentinel-kde"
summary = "KDE Plasma-native UAC-style confirmation dialog for Sentinel"
license = "GPL-3.0-or-later"
url = "https://github.com/atayozcan/sentinel"
post_install_script = "../../packaging-kde/packaging/rpm/post.sh"
pre_uninstall_script = "../../packaging-kde/packaging/rpm/preun.sh"
assets = [
    { source = "target/release/sentinel-kde-bundle.tar.gz", dest = "/usr/lib/sentinel-kde/bundle.tar.gz", mode = "644" },
]
[package.metadata.generate-rpm.requires]
pam = "*"
polkit = "*"
"layer-shell-qt6" = "*"
"kf6-kirigami" = "*"
"qt6-wayland" = "*"
"kf6-breeze-icons" = "*"
