[package]
name = "sentinel-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "COSMIC-native confirmation dialog for sentinel privilege escalation"

[[bin]]
name = "sentinel-helper"
path = "src/main.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", branch = "master", default-features = false, features = ["wayland", "winit", "tokio", "multi-window"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
rand = "0.10.1"
fluent-bundle = "0.16"
fluent-langneg = "0.14"
unic-langid = "0.9"
sentinel-config = { path = "../sentinel-config" }
serde.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# ---------------------------------------------------------------------------
# Distribution packaging metadata
# ---------------------------------------------------------------------------
# Debian/Ubuntu .deb via `cargo deb`. Builds both binaries via the workspace
# beforehand: `cargo build --release --workspace && cargo deb --no-build`.
[package.metadata.deb]
name = "sentinel"
maintainer = "Atay Özcan <atay@oezcan.me>"
copyright = "2025, Atay Özcan"
license-file = ["../../LICENSE", "0"]
extended-description = """
A Windows UAC-style confirmation dialog for Linux privilege escalation,
delivered as a PAM module plus a libcosmic helper. Wayland-only; designed
for cosmic-comp and other wlroots-based compositors with zwlr-layer-shell-v1
support."""
section = "admin"
priority = "optional"
depends = "libc6, libpam0g, libwayland-client0, libxkbcommon0, libfontconfig1, libfreetype6, libvulkan1, mesa-vulkan-drivers, dbus, policykit-1"
assets = [
    ["../../target/release/sentinel-helper",       "usr/lib/sentinel-helper",                 "755"],
    ["../../target/release/sentinel-polkit-agent", "usr/lib/sentinel-polkit-agent",           "755"],
    # pam_sentinel.so requires the execute bit (0755) — under
    # systemd-sandboxed PAM stacks (polkit-agent-helper@.service),
    # libpam refuses to dlopen .so files without it.
    ["../../target/release/libpam_sentinel.so",    "usr/lib/security/pam_sentinel.so",        "755"],
    ["../../config/sentinel.conf",                 "etc/security/sentinel.conf",              "644"],
    ["../../config/polkit-1",                      "etc/pam.d/polkit-1",                      "644"],
    # config/sudo is shipped under /usr/share/doc/ — users copy it
    # into /etc/pam.d/sudo manually. See PAM-Wiring wiki page.
    ["../../config/sudo",                          "usr/share/doc/sentinel/sudo",             "644"],
    ["../../packaging/systemd/polkit-agent-helper@.service.d/sentinel.conf", "etc/systemd/system/polkit-agent-helper@.service.d/sentinel.conf", "644"],
    ["../../packaging/xdg-autostart/sentinel-polkit-agent.desktop", "etc/xdg/autostart/sentinel-polkit-agent.desktop", "644"],
    ["../../README.md",                            "usr/share/doc/sentinel/README.md",        "644"],
    # Shell completions + man pages — generated by scripts/build-release.sh
    # into target/release/share/ before `cargo deb` runs.
    ["../../target/release/share/sentinel-helper.bash",        "usr/share/bash-completion/completions/sentinel-helper",         "644"],
    ["../../target/release/share/sentinel-polkit-agent.bash",  "usr/share/bash-completion/completions/sentinel-polkit-agent",   "644"],
    ["../../target/release/share/sentinel-helper.fish",        "usr/share/fish/vendor_completions.d/sentinel-helper.fish",      "644"],
    ["../../target/release/share/sentinel-polkit-agent.fish",  "usr/share/fish/vendor_completions.d/sentinel-polkit-agent.fish","644"],
    ["../../target/release/share/_sentinel-helper",            "usr/share/zsh/site-functions/_sentinel-helper",                 "644"],
    ["../../target/release/share/_sentinel-polkit-agent",      "usr/share/zsh/site-functions/_sentinel-polkit-agent",           "644"],
    ["../../target/release/share/sentinel-helper.1",           "usr/share/man/man1/sentinel-helper.1",                          "644"],
    ["../../target/release/share/sentinel-polkit-agent.1",     "usr/share/man/man1/sentinel-polkit-agent.1",                    "644"],
    ["../../packaging/man/sentinel.conf.5",                    "usr/share/man/man5/sentinel.conf.5",                            "644"],
    ["../../packaging/man/pam_sentinel.8",                     "usr/share/man/man8/pam_sentinel.8",                             "644"],
]
maintainer-scripts = "../../packaging/debian"
conf-files = [
    "/etc/security/sentinel.conf",
    "/etc/pam.d/polkit-1",
]

# RPM via `cargo generate-rpm`. Same prerequisite: `cargo build --release --workspace`.
[package.metadata.generate-rpm]
name = "sentinel"
summary = "UAC-style confirmation dialog for Linux privilege escalation"
license = "GPL-3.0-or-later"
url = "https://github.com/atayozcan/sentinel"
requires = { pam = "*", "libxkbcommon" = "*", fontconfig = "*", freetype = "*", "mesa-libGL" = "*", "vulkan-loader" = "*", polkit = "*", dbus = "*" }
assets = [
    { source = "target/release/sentinel-helper",     dest = "/usr/lib/sentinel-helper",          mode = "755" },
    { source = "target/release/sentinel-polkit-agent", dest = "/usr/lib/sentinel-polkit-agent",  mode = "755" },
    { source = "target/release/libpam_sentinel.so",  dest = "/usr/lib/security/pam_sentinel.so", mode = "755" },
    { source = "config/sentinel.conf",               dest = "/etc/security/sentinel.conf",       mode = "644", config = true },
    { source = "config/polkit-1",                    dest = "/etc/pam.d/polkit-1",               mode = "644", config = true },
    { source = "config/sudo",                        dest = "/usr/share/doc/sentinel/sudo",      mode = "644", doc = true },
    { source = "packaging/systemd/polkit-agent-helper@.service.d/sentinel.conf", dest = "/etc/systemd/system/polkit-agent-helper@.service.d/sentinel.conf", mode = "644" },
    { source = "packaging/xdg-autostart/sentinel-polkit-agent.desktop", dest = "/etc/xdg/autostart/sentinel-polkit-agent.desktop", mode = "644" },
    { source = "README.md",                          dest = "/usr/share/doc/sentinel/README.md", mode = "644", doc = true },
    { source = "LICENSE",                            dest = "/usr/share/licenses/sentinel/LICENSE", mode = "644", doc = true },
    { source = "target/release/share/sentinel-helper.bash",        dest = "/usr/share/bash-completion/completions/sentinel-helper",       mode = "644" },
    { source = "target/release/share/sentinel-polkit-agent.bash",  dest = "/usr/share/bash-completion/completions/sentinel-polkit-agent", mode = "644" },
    { source = "target/release/share/sentinel-helper.fish",        dest = "/usr/share/fish/vendor_completions.d/sentinel-helper.fish",    mode = "644" },
    { source = "target/release/share/sentinel-polkit-agent.fish",  dest = "/usr/share/fish/vendor_completions.d/sentinel-polkit-agent.fish", mode = "644" },
    { source = "target/release/share/_sentinel-helper",            dest = "/usr/share/zsh/site-functions/_sentinel-helper",       mode = "644" },
    { source = "target/release/share/_sentinel-polkit-agent",      dest = "/usr/share/zsh/site-functions/_sentinel-polkit-agent", mode = "644" },
    { source = "target/release/share/sentinel-helper.1",           dest = "/usr/share/man/man1/sentinel-helper.1",                mode = "644", doc = true },
    { source = "target/release/share/sentinel-polkit-agent.1",     dest = "/usr/share/man/man1/sentinel-polkit-agent.1",          mode = "644", doc = true },
    { source = "packaging/man/sentinel.conf.5",                    dest = "/usr/share/man/man5/sentinel.conf.5",                  mode = "644", doc = true },
    { source = "packaging/man/pam_sentinel.8",                     dest = "/usr/share/man/man8/pam_sentinel.8",                   mode = "644", doc = true },
]
# Polkit agent ships as an XDG autostart entry; the compositor picks it
# up on next session start. No %post / %preun scriptlets needed.
