[package]
name = "sentinel-polkit-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "polkit authentication agent backed by the Sentinel confirmation dialog"

[[bin]]
name = "sentinel-polkit-agent"
path = "src/main.rs"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
serde.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "sync", "io-util", "net", "fs", "time"] }
clap = { version = "4", features = ["derive"] }
nix.workspace = true
log.workspace = true
syslog.workspace = true
anyhow.workspace = true
thiserror.workspace = true
