[package]
name = "sentinel-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared library for the Sentinel PAM module, polkit agent, and helper: config schema/loader, /proc readers, logind metadata, logfmt helpers, and the Outcome wire enum."

[lib]
name = "sentinel_shared"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
toml.workspace = true
log.workspace = true
