[package]
name = "sentinel-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared library for the Sentinel PAM module, polkit agent, and helper: config schema/loader, /proc readers, logind metadata, logfmt helpers, and the Outcome wire enum."

[lib]
name = "sentinel_shared"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
toml.workspace = true
log.workspace = true
# Shared `audit::init_syslog` lives here so the PAM module and the
# polkit agent share the boilerplate. The helper transitively depends
# on it but doesn't reference the module; LTO drops the unused code.
syslog.workspace = true
# Optional: powers the shared `cli` module (Args parser + render-mode
# resolution) consumed by the helper frontends. Off by default so
# pam-sentinel and the polkit agent never compile clap.
clap = { version = "4", features = ["derive"], optional = true }

[features]
# Enable the shared `cli` module. The helper crates turn this on; the
# PAM module / polkit agent leave it off.
cli = ["dep:clap"]
